# email-verifier-app

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
api/: auth.py  main.py  rate_limit.py  routes.py  schemas.py
build-an-email-verifier-tool-user/: README.md  app.py
data/: abuse_prefixes.json  disposable_domains.txt  domain_typos.json  public_domains.json  role_prefixes.json
docs/: usage.md
domain_health/: __init__.py  bimi_checker.py  blacklist_checker.py  dkim_checker.py  dmarc_checker.py  monitor.py  spf_checker.py
email_verifier/: __init__.py  disposable_domains.txt  enhanced_verifier.py  export_utils.py  io.py  name_extractor.py  processor.py  smtp_check.py
enrichment/: __init__.py  cache.py  company_lookup.py  models.py  person_lookup.py  profile_matcher.py  search_engine.py  summary.py  whois_lookup.py
pages/: api_settings.py  bulk_verification.py  dashboard.py  domain_monitoring.py  email_finder.py  settings.py  single_verification.py
safe_email_check/: __init__.py  exceptions.py  types.py  validator.py
services/: __init__.py  bulk_processor.py  email_finder.py  export_service.py  history_service.py  input_service.py  job_service.py  summary_service.py  suppression_service.py  webhook_service.py
tests/: smtp_test_server.py  test_advanced_features.py  test_api.py  test_bulk_processor.py  test_cache.py  test_catch_all.py  test_disposable.py  test_dns_validation.py  test_email_verifier.py  test_enrichment.py  test_export_service.py  test_file_operations.py  test_normalizer.py  test_pipeline.py  test_role_detector.py  (+5 more)
(+37 files in other folders)
