[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "email-verifier"
version = "2.0.0"
description = "Production-ready bulk email verifier with multi-layer validation pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.29.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "dnspython>=2.4.0",
    "email-validator>=2.0.0",
    "requests>=2.31.0",
    "idna>=3.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "httpx2>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["verifier*", "services*", "domain_health*", "api*", "enrichment*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E712"]
